cmake_minimum_required(VERSION 2.8.6)
if(COMMAND cmake_policy)
    if(POLICY CMP0026)
        if(CMAKE_VERSION VERSION_LESS 2.8.11)
            cmake_policy(SET CMP0026 OLD)
        else()
            cmake_policy(SET CMP0026 NEW)
        endif()
    endif()
endif()

set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_AUTOMOC ON)

add_subdirectory(qmplay2)
if(CMAKE_VERSION VERSION_LESS 2.8.11)
    get_target_property(libqmplay2 qmplay2 LOCATION)
else()
    set(libqmplay2 $<TARGET_FILE:qmplay2>)
endif()

add_subdirectory(modules)
add_subdirectory(gui)
